Fix blurry logo + responsive

--- a/src/moonfit-landing/assets/scss/sections/_section-hero.scss
+++ b/src/moonfit-landing/assets/scss/sections/_section-hero.scss
@@ -121,22 +121,27 @@
 .powered-by-wrap {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 	text-align: center;
-	max-width: 540px;
-	margin: 54px auto 0;
+	margin: 24px auto 0;
+	overflow: hidden;
+	width: 520px;
+	max-width: 100%;
 
 	> div {
-		flex: 1 1 0px;
+		margin: 30px 0 0;
+		flex: 0 0 260px;
+		max-width: 100%;
 		padding: 0 15px;
 
 		+ div {
 			position: relative;
 
-			&:after {
+			&:before {
 				content: '';
 				position: absolute;
 				top: 50%;
-				left: 0;
+				left: -1px;
 				width: 1px;
 				height: 40px;
 				transform: translate(0, -50%);
@@ -265,6 +270,20 @@
 
 		.button-group {
 			--gutter-x: 14px;
+		}
+	}
+}
+
+@media screen and (max-width: 580px) {
+	.powered-by-wrap > div {
+		flex: 0 0 100%;
+
+		+ div:before {
+			width: 80px;
+			height: 1px;
+			top: -15px;
+			left: 50%;
+			transform: translate(-50%, 0);
 		}
 	}
 }
